Mapa 3 - Viviendas que disponen de radio

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li class="collection-header"><h4>Mapas estadísticos</h4></li>
                 <li class="collection-item"><div>1. Abandono escolar MS 2019-2020<a class="secondary-content black-text"><i class="material-icons"></i></a></div></li>
                 <li class="collection-item"><div>2. Eficiencia terminal MS 2019-2020<a class="secondary-content black-text"><i class="material-icons"></i></a></div></li>
-                <li class="collection-item"><div>3. Porcentaje de viviendas particulares habitadas que disponen de radio<a class="secondary-content black-text"><i class="material-icons"></i></a></div></li>
+                <li class="collection-item"><div>3. Viviendas habitadas que disponen de radio<a class="secondary-content black-text"><i class="material-icons"></i></a></div></li>
               </ul>
         </div>
         <div class="col l7">
