--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
 
     <br>
     <div class="row">
-        <div class="col l1"></div>
-        <div class="col l3">
-            <ul class="collection with-header">
-                <li class="collection-header"><h4>Mapas estadísticos</h4></li>
+        
+        <div class="col l4">
+            <ul class="collection with-header collection-margin-left">
+                <li class="collection-header"><h5>Mapas para presentaciones municipales</h5></li>
                 <li class="collection-item"><div>1. Abandono escolar MS 2019-2020<a class="secondary-content black-text"><i class="material-icons"></i></a></div></li>
                 <li class="collection-item"><div>2. Eficiencia terminal MS 2019-2020<a class="secondary-content black-text"><i class="material-icons"></i></a></div></li>
-                <li class="collection-item"><div>3. Viviendas habitadas que disponen de radio<a class="secondary-content black-text"><i class="material-icons"></i></a></div></li>
+                <li class="collection-item"><div>3. Viviendas que disponen de radio<a class="secondary-content black-text"><i class="material-icons"></i></a></div></li>
+                <li class="collection-item"><div>4. Viviendas que disponen de televisor<a class="secondary-content overflow-vertical-icon black-text"><i class="material-icons"></i></a></div></li>
+                <li class="collection-item"><div>5. Viviendas sin radio ni televisor<a class="secondary-content overflow-vertical-icon black-text"><i class="material-icons"></i></a></div></li>
+                <li class="collection-item"><div>6. Viviendas con computadora, laptop o tablet<a class="secondary-content overflow-vertical-icon black-text"><i class="material-icons"></i></a></div></li>
               </ul>
         </div>
         <div class="col l7">
