--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mapas estadísticos</title>
+    <title>Mapas para presentaciones municipales</title>
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="Resource/css/app.css">
@@ -23,7 +23,15 @@
                 <li class="collection-item"><div>4. Viviendas que disponen de televisor<a class="secondary-content overflow-vertical-icon black-text"><i class="material-icons"></i></a></div></li>
                 <li class="collection-item"><div>5. Viviendas sin radio ni televisor<a class="secondary-content overflow-vertical-icon black-text"><i class="material-icons"></i></a></div></li>
                 <li class="collection-item"><div>6. Viviendas con computadora, laptop o tablet<a class="secondary-content overflow-vertical-icon black-text"><i class="material-icons"></i></a></div></li>
-              </ul>
+                <li class="collection-item"><div>7. Viviendas con teléfono celular<a class="secondary-content overflow-vertical-icon black-text"><i class="material-icons"></i></a></div></li>
+                <li class="collection-item"><div>8. Viviendas sin teléfono celular<a class="secondary-content overflow-vertical-icon black-text"><i class="material-icons"></i></a></div></li>
+                <li class="collection-item"><div>9. Viviendas con internet<a class="secondary-content overflow-vertical-icon black-text"><i class="material-icons"></i></a></div></li>
+                <li class="collection-item"><div>10. Viviendas sin computadora ni internet<a class="secondary-content overflow-vertical-icon black-text"><i class="material-icons"></i></a></div></li>
+                <li class="collection-item"><div>11. Grado promedio de escolaridad<a class="secondary-content overflow-vertical-icon black-text"><i class="material-icons"></i></a></div></li>
+                <li class="collection-item"><div>12. Población de +18 con educación posbásica<a class="secondary-content overflow-vertical-icon black-text"><i class="material-icons"></i></a></div></li>
+                <li class="collection-item"><div>13. Población con educación básica incompleta<a class="secondary-content overflow-vertical-icon black-text"><i class="material-icons"></i></a></div></li>
+
+            </ul>
         </div>
         <div class="col l7">
 
